--- a/ST10466018 POE part 1/Root/contact.html
+++ b/ST10466018 POE part 1/Root/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
    <title>Gamecave Contact details </title>
-   <link rel="stylesheet" type="text/css" href="Style.css">
+   <link rel="stylesheet" type="text/css" href="css/Style.css">
     </head>
     <body>
         <div class="container">
