--- a/ST10466018 POE part 1/Root/services.html
+++ b/ST10466018 POE part 1/Root/services.html
@@ -3,7 +3,7 @@
 
     <head>
    <title>Gamecave Services</title>
-   <link rel="stylesheet" type="text/css" href="Style.css">
+   <link rel="stylesheet" type="text/css" href="css/Style.css">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
        
     </head>
