--- a/ST10466018 POE part 1/Root/About.html
+++ b/ST10466018 POE part 1/Root/About.html
@@ -1,36 +1,45 @@
-
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-   <title>Gamecave Information</title>
-   <link rel="stylesheet" type="text/css" href="css/Style.css">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       
-    </head>
-    <body>
-        <div class="container">
+<head>
+    <title>Gamecave Information</title>
+    <meta name="description" content="Learn about the history, mission and goals of Gamecave">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <div class="container">
         <h1>About Us!</h1>
-
         <h2>History of the Gamecave</h2>
-        <p> The Gamecave was founded in 2018 when it was a small game shop in cape town which quickly gained the support of the community
-            which caused it to grow into the amazing space for gamers that it is known for now
+        <p>The Gamecave was founded in 2018 when it was a small game shop in Cape Town which quickly gained the support of the community
+            which caused it to grow into the amazing space for gamers that it is known for now.
         </p>
-        <h3> Our mission and Goal</h3>
-        <p>We at Gamecave believe in creating a community in which we all get along and have fun with each other in a place built to create friendships with others who share our love of Fun and games
-            and all we seek is to bring all those people under one roof to become and call family with one another
+        <h3>Our mission and Goal</h3>
+        <p>We at Gamecave believe in creating a community in which we all get along and have fun with each other in a place built to create friendships with others who share our love of fun and games
+            and all we seek is to bring all those people under one roof to become and call family with one another.
         </p>
         <nav>
-            <a href="Index.html">HomeCave</a> | <a href="About.html">About Us!</a> | <a href="services.html">What We Offer</a> | <a href="contact.html">Contact Details</a> | <a href="enquiry.html">Enquiry</a>
+            <a href="index.html">HomeCave</a> | <a href="about.html">About Us!</a> | <a href="services.html">What We Offer</a> | <a href="contact.html">Contact Details</a> | <a href="enquiry.html">Enquiry</a> | <a href="#" id="openLocation">Location</a>
         </nav>
-        </div>
-
-
-
-        <footer>
-            <p>@TheGameCave All Rights Reserved 2025</p>  
-        </footer>
-            
-    </body>
-  
-
+    </div>
+    <div id="locationModal" class="modal">
+        <span id="locationClose" class="close-btn">&times;</span>
+        <h2>GameCave Location</h2>
+        <iframe 
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3303.385309133004!2d18.47447111521032!3d-33.92486808065847!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1dcc5d664ed2f4bf%3A0x7aab35ff8b5c05e4!2sCape%20Town%20City%20Centre!5e0!3m2!1sen!2sza!4v1666156178901!5m2!1sen!2sza" 
+          width="100%" 
+          height="250" 
+          style="border:0;" 
+          allowfullscreen="" 
+          loading="lazy" 
+          referrerpolicy="no-referrer-when-downgrade" 
+          title="GameCave Location">
+        </iframe>
+        <p>123 Neon Street, Cyber City, 45678</p>
+    </div>
+    <footer>
+        <p>@TheGameCave All Rights Reserved 2025</p>
+    </footer>
+    <script src="js/script.js"></script>
+</body>
 </html>
+/*methods used were provided by and consulted to by chat gpt open ai*/
